IMPALA-2954: Don't refer to potentially NULL runtime state

PlanFragmentExecutor::Cancel() tries to log the fragment instance ID
from the runtime state at VLOG_QUERY, but runtime state may be NULL if
Prepare() has not been called.

Change-Id: I7a21a0ef8721442e39b2873c5c2d8e91b442afb1
Reviewed-on: http://gerrit.cloudera.org:8080/2069
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Reviewed-by: Marcel Kornacker <marcel@cloudera.com>
Tested-by: Internal Jenkins